# recursive-field-math-pro

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DISCUSSION.md  Dockerfile  MAINTAINERS.md  Makefile  PR24_RESOLUTION.md  README.md  RELEASE_NOTES.md  SECURITY.md  TAGLINE.md  apply_aes_v1_1_review.sh  eslint.config.js  mkdocs.yml  my_recursive_ai.py  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  ruff.toml  setup.py  test_agent_commit.txt
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
GX_SONIC_12/: RFC_GX-SONIC-12_v0.1.md
RELEASE_NOTES/: README.md  v0.1.1.md
assembler/: cap_macro.js  cap_mnemonics.js
cpu/: balanced_ternary_arith.js  cap_kit.js  disasm.js  macro_assembler.js  mini_assembler.js  ternary_cpu_v8.js  ternary_cpu_v9.js
docs/: BRANCH_PROTECTION_RUNBOOK.md  COMPATIBILITY_MATRIX.md  ENGINEERING_STANDARDS.md  HEALTH_DASHBOARD.md  MAINTAINER_QUICKSTART.md  MATHEMATICS.md  PROJECT_STATE_CERTIFICATE.md  QUALITY_GATES.md  RELEASE_CHECKLIST.md  aes.html  agi_stack_architecture.md  code-style.md  codex-entropy-pump.md  compression_backend.js  compression_demo.js  index.html  metrics.json  regen88-codex.md  regen88-flame-correction.md  repl.html  repl_harness.js  rff_phi_mod_verification.md  sample.csv  sequence.csv  summary.json
examples/: request_nine.json  sample.ipynb  sample.json  sample.md
findings/: .lucas_agent_state.json  20260513T083051Z_signature-4-7-11_7fdeedff.md  20260513T085202Z_rfm-test-suite_47201271.md  20260513T085907Z_cfrac-structure_29b39ecc.md  20260513T085915Z_rfm-test-suite_47201271.md  20260513T145908Z_gf-evaluation_c9f17987.md  20260513T205908Z_doubling-formula_48ecd6b9.md  20260514T025908Z_cassini-lucas_ec540a65.md  20260514T025919Z_rfm-test-suite_47201271.md  20260514T085908Z_ratio-convergence_d856711d.md  20260514T085918Z_rfm-test-suite_47201271.md  20260516T032144Z_signature-4-7-11_7fdeedff.md  20260516T032228Z_rfm-test-suite_47201271.md  20260516T085908Z_cfrac-structure_3f932579.md  20260516T085919Z_rfm-test-suite_47201271.md  20260516T145908Z_gf-evaluation_d5ebfb1a.md  20260516T145916Z_rfm-test-suite_47201271.md  20260516T205909Z_doubling-formula_2ed2095b.md  20260516T205920Z_rfm-test-suite_47201271.md  20260517T025908Z_cassini-lucas_6623c278.md  20260517T025915Z_rfm-test-suite_47201271.md  20260517T085908Z_ratio-convergence_552be9c7.md  20260517T085916Z_rfm-test-suite_47201271.md  20260517T145909Z_signature-4-7-11_7fdeedff.md  20260517T165915Z_rfm-test-suite_47201271.md  20260517T205908Z_cfrac-structure_af9247ff.md  20260518T005909Z_gf-evaluation_6eed1e64.md  20260518T045909Z_doubling-formula_99f40f6e.md  20260518T045919Z_rfm-test-suite_47201271.md  20260518T085909Z_cassini-lucas_b1ac8f10.md  20260518T125909Z_ratio-convergence_abcda7fe.md  20260518T165908Z_signature-4-7-11_7fdeedff.md  20260518T165919Z_rfm-test-suite_47201271.md  20260518T205908Z_cfrac-structure_9fedd0da.md  20260519T005908Z_gf-evaluation_4ea48142.md  20260519T045908Z_doubling-formula_cd7e50d2.md  20260519T045915Z_rfm-test-suite_47201271.md  20260519T085909Z_cassini-lucas_a2b79492.md  20260519T125909Z_ratio-convergence_7a4ef6ab.md  20260519T165909Z_signature-4-7-11_7fdeedff.md  (+6 more)
marketing/: blog_ternary_agents.md  hn_post.md  pitch_deck.md  reddit_ml_post.md  vc_dm_templates.md  x_thread.md
paper/: rff_geometric_invariants.tex  rff_phi_mod_verification.tex  riemann_phi_clustering_preprint.tex
plugins/: test_aes.json
policies/: default.json
regen88_codex/: __init__.py  flame_correct.py  harmonic_balance.py  reseed_pure.py  shard_isolate.py  utils.py
scripts/: __init__.py  build_artifacts.sh  check_artifacts.sh  check_evolution.sh  codex_entropy_pump.py  dev_bootstrap.sh  dev_check.sh  evaluate_results.py  figure_manifest.py  flame_correction.py  generate_figures.py  generate_plots.py  publish_pypi.sh  regen88_entropy_healing.py  regen88_flame_correction.py  regen88_integration.py  (+8 more)
(+209 files in other folders)
