[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regen88-codex"
version = "0.1.0"
description = "Regen88 Codex — Cross-platform recursive field math with entropy-pump, Lucas sequences, and complete CI/CD"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
authors = [{name="Commander X (Wizard)"}]
requires-python = ">=3.9"
dependencies = [
    "python-chess>=1.9",
    "numpy>=1.26", 
    "matplotlib>=3.8"
]

[project.scripts]
rfm = "recursive_field_math.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src", "."]
